apps/hello-world/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello
  namespace: demo
spec:
  to:
    kind: Service
    name: hello
  port:
    targetPort: 8080
  tls:
    termination: edge
